2006-03-31  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Component/keyPressTest.java: 
	New test.

2006-03-30  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGQTable.java: New
	test.

2006-03-29  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Panel/TestPanelRepaint.java
	(test): Added check.
	(myPanel): Added component listener.

2006-03-29  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/javax/swing/text/GapContent/insertString.java:
	(testGeneral): Let test fail when unexpected exception occurs.
	(testSpecialInsert): New test.

2006-03-26  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata1,
	gnu/testlet/java/util/regex/Pattern/testdata2:
	Moved all remaining cases from testdata2 to testdata1.

2006-03-25  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/locales/LocaleTest.java:
	Updated to fit new CLDR 1.3 data.

2006-03-25  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/locales/LocaleTest.java:
	Updated for new fixed locale data.

2006-03-25  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/util/GregorianCalendar/setFirstDayOfWeek.java:
	New tests.

2006-03-23  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/java/awt/Window/focusCycleRootTest.java: New test.

2006-03-23  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/java/io/ObjectOutputStream/useProtocolVersion.java: New test. 

2006-03-23  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata1,
	gnu/testlet/java/util/regex/Pattern/testdata2:
	Moved some cases from testdata2 to testdata1.

2006-03-22  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/imageio/ImageIO/Bitmap-16Bit.bmp:
	Added bitmap for test.
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-1Bit.bmp:
	Added bitmap for test.
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-24Bit.bmp:
	Added bitmap for test.
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-32Bit.bmp:
	Added bitmap for test.